# PID

./: conda_list  json2jpg.py  pip_list  pyproject.toml
configs/: default.py
configs/tooth/: nano-dof.yaml  pico-dof.yaml  pidnet_nano_SPAPPM_woPag_tooth_w_target_2022-10-04.yaml  pidnet_nano_tooth_w_target_2022-10-04.yaml  pidnet_pico_tooth_w_target_2023-02-16.yaml  pidnet_pico_tooth_w_target_230410.yaml  pidnet_small_tooth_w_target_2023-02-16.yaml  pidnet_tiny_trace_tooth_w_target_2022-10-04.yaml  small-dof.yaml
tools/: .custom.py.swp  custom.py  eval.py  eval_with_scripted.py  train.py  train_for_scripted.py
utils/: function.py  utils.py
